# social-cover-designer

./: .gitignore  CHANGELOG-2026-05-28-v1.0.5-build.md  CHANGELOG-2026-05-28-v1.0.6-build.md  CHANGELOG-2026-05-29-v1.0.11.md  CHANGELOG-2026-05-29-v1.0.7-build.md  CHANGELOG-2026-05-29-v1.0.8-build.md  CHANGELOG-2026-05-29-v1.0.9-build.md  CHANGELOG-2026-05-29.md  CHANGELOG-2026-06-01-v1.0.12.md  CHANGELOG-2026-06-02-v1.0.13.md  CHANGELOG-2026-06-02-v1.0.14.md  CHANGELOG-2026-06-03-v1.0.15.md  CHANGELOG-2026-06-03-v1.0.16.md  CHANGELOG-2026-06-04-ai-image-unpackaged.md  CHANGELOG-2026-06-04-v1.0.17.md  DESKTOP.md  USAGE.md  index.html  package-lock.json  package.json
.github/workflows/: sync-website-downloads.yml  windows-build.yml
desktop/: main.js  preload.js
scripts/: create-local-update-manifest.js  prepare-tauri-dist.js  sync-website-downloads.js
src/: app.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
website/: app.js  index.html  styles.css
