[package]
name = "youdesign"
version = "1.1.4"
description = "YOUDESIGN social cover designer desktop app."
authors = ["YOUXIAKE"]
license = ""
repository = "https://github.com/kim-wing/social-cover-designer"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "youdesign_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ttf-parser = "0.25"
reqwest = { version = "0.11", features = ["json", "multipart"] }
base64 = "0.22"
rfd = "0.15"
